--- a/WebCore/WebCore.vcproj/WebCore.vcproj
+++ b/WebCore/WebCore.vcproj/WebCore.vcproj
@@ -5290,6 +5290,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\rendering\RenderSVGTransformableContainer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\rendering\RenderSVGTransformableContainer.h"
+				>
+			</File>
+			<File
 				RelativePath="..\rendering\RenderSVGTSpan.cpp"
 				>
 			</File>
