Rename WebKit_debug.dll to WebKit.dll for the Debug configuration
 JavaScriptCore:

         Updated testkjs for the rename of WebKit_debug.dll to WebKit.dll for the Debug configuration

         Reviewed by Kevin McCullough.

         * JavaScriptCore.vcproj/debug.vsprops: Added WebKitDLLConfigSuffix.
         * JavaScriptCore.vcproj/debug_internal.vsprops: Ditto.
         * JavaScriptCore.vcproj/release.vsprops: Ditto.
         * JavaScriptCore.vcproj/testkjs/testkjs.vcproj: Use
         WebKitDLLConfigSuffix when referring to WebKit.dll, and fixed a typo
         in the name of icuuc36[_debug].dll.

 WebKitTools:

         Updated for rename of WebKit_debug.dll to WebKit.dll for the Debug configuration

         Reviewed by Kevin McCullough.

         * DumpRenderTree/win/DumpRenderTree.vcproj: Use WebKitDLLConfigSuffix
         when referring to WebKit.dll.
         * DumpRenderTree/win/debug.vsprops: Added WebKitDLLConfigSuffix.
         * DumpRenderTree/win/debug_internal.vsprops: Ditto.
         * DumpRenderTree/win/release.vsprops: Ditto.
         * Scripts/run-safari: Don't pass /debug to Safari anymore because we
         never have a _debug suffix on WebKit.dll.
         * WebKitInitializer/WebKitInitializer.cpp:
         (initializeWebKit): Only use the _debug suffix for WebKit.dll when
         specified.
         * WebKitInitializer/debug_internal.vsprops: Added
         DEBUG_WEBKIT_HAS_SUFFIX preprocessor definition.

 WebKit/win:

         Rename WebKit_debug.dll to WebKit.dll for the Debug configuration

         This is needed so that we can stop having Safari delay-load WebKit,
         which in turn is needed so that Maciej can land a JavaScript speedup
         which breaks delay-loading.

         Reviewed by Kevin McCullough.

         * WebKit.vcproj/WebKit.vcproj: Use WebKitDLLConfigSuffix for the name
         of our DLL and module definition file.
         * WebKit.vcproj/debug.vsprops: Added WebKitDLLConfigSuffix.
         * WebKit.vcpro

--- a/WebKitTools/DumpRenderTree/win/DumpRenderTree.vcproj
+++ b/WebKitTools/DumpRenderTree/win/DumpRenderTree.vcproj
@@ -62,11 +62,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="WebKitGUID$(WebKitConfigSuffix).lib WebKit$(WebKitConfigSuffix).lib WTF$(WebKitConfigSuffix).lib WebKitInitializer$(WebKitConfigSuffix).lib CoreGraphics$(LibraryConfigSuffix).lib CoreFoundation$(LibraryConfigSuffix).lib pthreadVC2$(LibraryConfigSuffix).lib gdi32.lib ole32.lib oleaut32.lib user32.lib"
+				AdditionalDependencies="WebKitGUID$(WebKitConfigSuffix).lib WebKit$(WebKitDLLConfigSuffix).lib WTF$(WebKitConfigSuffix).lib WebKitInitializer$(WebKitConfigSuffix).lib CoreGraphics$(LibraryConfigSuffix).lib CoreFoundation$(LibraryConfigSuffix).lib pthreadVC2$(LibraryConfigSuffix).lib gdi32.lib ole32.lib oleaut32.lib user32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)$(WebKitConfigSuffix).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(WebKitOutputDir)\lib&quot;;&quot;$(WebKitLibrariesDir)\lib&quot;;&quot;$(WebKitOutputDir)\bin&quot;"
-				DelayLoadDLLs="WebKit$(WebKitConfigSuffix).dll;CoreGraphics$(LibraryConfigSuffix).dll;CoreFoundation$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll"
+				DelayLoadDLLs="WebKit$(WebKitDLLConfigSuffix).dll;CoreGraphics$(LibraryConfigSuffix).dll;CoreFoundation$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -142,11 +142,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="WebKitGUID$(WebKitConfigSuffix).lib WebKit$(WebKitConfigSuffix).lib WTF$(WebKitConfigSuffix).lib WebKitInitializer$(WebKitConfigSuffix).lib CoreGraphics$(LibraryConfigSuffix).lib CoreFoundation$(LibraryConfigSuffix).lib pthreadVC2$(LibraryConfigSuffix).lib gdi32.lib ole32.lib oleaut32.lib user32.lib"
+				AdditionalDependencies="WebKitGUID$(WebKitConfigSuffix).lib WebKit$(WebKitDLLConfigSuffix).lib WTF$(WebKitConfigSuffix).lib WebKitInitializer$(WebKitConfigSuffix).lib CoreGraphics$(LibraryConfigSuffix).lib CoreFoundation$(LibraryConfigSuffix).lib pthreadVC2$(LibraryConfigSuffix).lib gdi32.lib ole32.lib oleaut32.lib user32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)$(WebKitConfigSuffix).exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(WebKitOutputDir)\lib&quot;;&quot;$(WebKitLibrariesDir)\lib&quot;;&quot;$(WebKitOutputDir)\bin&quot;"
-				DelayLoadDLLs="WebKit$(WebKitConfigSuffix).dll;CoreGraphics$(LibraryConfigSuffix).dll;CoreFoundation$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll"
+				DelayLoadDLLs="WebKit$(WebKitDLLConfigSuffix).dll;CoreGraphics$(LibraryConfigSuffix).dll;CoreFoundation$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -226,11 +226,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="WebKitGUID$(WebKitConfigSuffix).lib WebKit$(WebKitConfigSuffix).lib WTF$(WebKitConfigSuffix).lib WebKitInitializer$(WebKitConfigSuffix).lib CoreGraphics$(LibraryConfigSuffix).lib CoreFoundation$(LibraryConfigSuffix).lib pthreadVC2$(LibraryConfigSuffix).lib gdi32.lib ole32.lib oleaut32.lib user32.lib"
+				AdditionalDependencies="WebKitGUID$(WebKitConfigSuffix).lib WebKit$(WebKitDLLConfigSuffix).lib WTF$(WebKitConfigSuffix).lib WebKitInitializer$(WebKitConfigSuffix).lib CoreGraphics$(LibraryConfigSuffix).lib CoreFoundation$(LibraryConfigSuffix).lib pthreadVC2$(LibraryConfigSuffix).lib gdi32.lib ole32.lib oleaut32.lib user32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)$(WebKitConfigSuffix).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(WebKitOutputDir)\lib&quot;;&quot;$(WebKitLibrariesDir)\lib&quot;;&quot;$(WebKitOutputDir)\bin&quot;"
-				DelayLoadDLLs="WebKit$(WebKitConfigSuffix).dll;CoreGraphics$(LibraryConfigSuffix).dll;CoreFoundation$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll"
+				DelayLoadDLLs="WebKit$(WebKitDLLConfigSuffix).dll;CoreGraphics$(LibraryConfigSuffix).dll;CoreFoundation$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
