--- a/JavaScriptCore/JavaScriptCore.vcproj/testkjs/testkjs.vcproj
+++ b/JavaScriptCore/JavaScriptCore.vcproj/testkjs/testkjs.vcproj
@@ -71,7 +71,7 @@
 				OutputFile="$(OutDir)\$(ProjectName)$(WebKitConfigSuffix).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(WebKitOutputDir)\lib&quot;;&quot;$(WebKitLibrariesDir)\lib&quot;;..\..\..\icu\lib"
-				DelayLoadDLLs="icuuc$(LibraryConfigSuffix)36.dll;pthreadVC2$(LibraryConfigSuffix).dll;WebKit$(WebKitConfigSuffix).dll"
+				DelayLoadDLLs="icuuc36$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll;WebKit$(WebKitDLLConfigSuffix).dll"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -156,7 +156,7 @@
 				OutputFile="$(OutDir)\$(ProjectName)$(WebKitConfigSuffix).exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(WebKitOutputDir)\lib&quot;;&quot;$(WebKitLibrariesDir)\lib&quot;;..\..\..\icu\lib"
-				DelayLoadDLLs="icuuc$(LibraryConfigSuffix)36.dll;pthreadVC2$(LibraryConfigSuffix).dll;WebKit$(WebKitConfigSuffix).dll"
+				DelayLoadDLLs="icuuc36$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll;WebKit$(WebKitDLLConfigSuffix).dll"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -245,7 +245,7 @@
 				OutputFile="$(OutDir)\$(ProjectName)$(WebKitConfigSuffix).exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(WebKitOutputDir)\lib&quot;;&quot;$(WebKitLibrariesDir)\lib&quot;;..\..\..\icu\lib"
-				DelayLoadDLLs="icuuc$(LibraryConfigSuffix)36.dll;pthreadVC2$(LibraryConfigSuffix).dll;WebKit$(WebKitConfigSuffix).dll"
+				DelayLoadDLLs="icuuc36$(LibraryConfigSuffix).dll;pthreadVC2$(LibraryConfigSuffix).dll;WebKit$(WebKitDLLConfigSuffix).dll"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
