Windows build fix.
        Reviewed by Anders.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Disable
        some mismatched signed/unsigned comparison warnings.
        * pcre/pcre_exec.c:
        (match): #if-out some labels that don't seem to exist.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26701 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
+++ b/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
@@ -58,7 +58,7 @@
 				WarnAsError="true"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4127;4355;4510;4512;4610;4706;4996"
+				DisableSpecificWarnings="4018;4127;4355;4389;4510;4512;4610;4706;4996"
 				ForcedIncludeFiles=""
 			/>
 			<Tool
@@ -133,7 +133,7 @@
 				WarnAsError="true"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4127;4355;4510;4512;4610;4706;4996"
+				DisableSpecificWarnings="4018;4127;4355;4389;4510;4512;4610;4706;4996"
 				ForcedIncludeFiles=""
 			/>
 			<Tool
