Build fix for VC++ Express
        Reviewed by NOBODY.

        * FindSafari/FindSafari.vcproj: Explicitly link against advapi32.lib
        and ole32.lib.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26727 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/FindSafari/FindSafari.vcproj
+++ b/WebKitTools/FindSafari/FindSafari.vcproj
@@ -57,7 +57,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="shlwapi.lib"
+				AdditionalDependencies="shlwapi.lib advapi32.lib ole32.lib"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 			/>
@@ -127,7 +127,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="shlwapi.lib"
+				AdditionalDependencies="shlwapi.lib advapi32.lib ole32.lib"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
