Reviewed by Brady.
        Move some SQL-related classes to platform/sql.
        
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * loader/icon/SQLDatabase.cpp: Removed.
        * loader/icon/SQLDatabase.h: Removed.
        * loader/icon/SQLStatement.cpp: Removed.
        * loader/icon/SQLStatement.h: Removed.
        * loader/icon/SQLTransaction.cpp: Removed.
        * loader/icon/SQLTransaction.h: Removed.
        * platform/sql/SQLDatabase.cpp: Copied from loader/icon/SQLDatabase.cpp.
        * platform/sql/SQLDatabase.h: Copied from loader/icon/SQLDatabase.h.
        * platform/sql/SQLStatement.cpp: Copied from loader/icon/SQLStatement.cpp.
        * platform/sql/SQLStatement.h: Copied from loader/icon/SQLStatement.h.
        * platform/sql/SQLTransaction.cpp: Copied from loader/icon/SQLTransaction.cpp.
        * platform/sql/SQLTransaction.h: Copied from loader/icon/SQLTransaction.h.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26801 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/WebCore.vcproj/WebCore.vcproj
+++ b/WebCore/WebCore.vcproj/WebCore.vcproj
@@ -2897,30 +2897,6 @@
 					RelativePath="..\loader\icon\PageURLRecord.h"
 					>
 				</File>
-				<File
-					RelativePath="..\loader\icon\SQLDatabase.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\loader\icon\SQLDatabase.h"
-					>
-				</File>
-				<File
-					RelativePath="..\loader\icon\SQLStatement.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\loader\icon\SQLStatement.h"
-					>
-				</File>
-				<File
-					RelativePath="..\loader\icon\SQLTransaction.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\loader\icon\SQLTransaction.h"
-					>
-				</File>
 			</Filter>
 			<Filter
 				Name="win"
@@ -4510,6 +4486,30 @@
 				</File>
 				<File
 					RelativePath="..\platform\sql\SQLAuthorizer.h"
+					>
+				</File>
+				<File
+					RelativePath="..\platform\sql\SQLDatabase.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\platform\sql\SQLDatabase.h"
+					>
+				</File>
+				<File
+					RelativePath="..\platform\sql\SQLStatement.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\platform\sql\SQLStatement.h"
+					>
+				</File>
+				<File
+					RelativePath="..\platform\sql\SQLTransaction.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\platform\sql\SQLTransaction.h"
 					>
 				</File>
 				<File
