2007-10-20  Alp Toker  <alp@atoker.com>
        Reviewed by Eric.

        Support text boundary detection.
        Move TextBoundariesWin.cpp to platform/ since it's portable and useful.
        Split out and implement some TemporaryLinkStubs.

        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * platform/TextBoundariesICU.cpp: Copied from WebCore/platform/win/TextBoundariesWin.cpp.
        * platform/gtk/Language.cpp: Added.
        (WebCore::defaultLanguage):
        * platform/gtk/TemporaryLinkStubs.cpp:
        * platform/gtk/TextBreakIteratorInternalICUGtk.cpp: Added.
        (WebCore::currentTextBreakLocaleID):
        * platform/win/TextBoundariesWin.cpp: Removed.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26831 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/WebCore.vcproj/WebCore.vcproj
+++ b/WebCore/WebCore.vcproj/WebCore.vcproj
@@ -3355,6 +3355,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\platform\TextBoundariesICU.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\platform\TextBreakIterator.h"
 				>
 			</File>
@@ -3687,10 +3691,6 @@
 				</File>
 				<File
 					RelativePath="..\platform\win\TemporaryLinkStubs.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\platform\win\TextBoundariesWin.cpp"
 					>
 				</File>
 				<File
